# NekoDot-Engine

./: CMakeLists.txt
.github/workflows/: build.yml
editor/: editor.cpp
scripts/: main.cs
shaders/: fragment.glsl
src/: main.cpp
src/Audio/: Audio.h
src/Core/: Input.h  Time.h  Window.h
src/Graphics/: Camera.h  Light.h  Material.h  Mesh.h  Renderer.h  Shader.h  Texture.h
src/Physics/: Collision.h
src/Scene/: Component.h  GameObject.h
src/Scripting/: CSharpBridge.h
